--- a/event.html
+++ b/event.html
@@ -14,7 +14,7 @@
         </div>
 
         <div class="navlinks">
-            <a href="Page_01.html">Home</a>
+            <a href="home.html">Home</a>
             <a href="voltunnteer.html">Volunteer</a>
             <a href="contact.html">Contact</a>
         </div>
